@@ -73,6 +73,20 @@ using namespace triagens::arango;
 // -----------------------------------------------------------------------------
 
 ////////////////////////////////////////////////////////////////////////////////
+/// @brief Windows console codepage
+////////////////////////////////////////////////////////////////////////////////
+
+#ifdef _WIN32
+static int CodePage = 65001;
+#endif
+
+////////////////////////////////////////////////////////////////////////////////
+/// @brief command prompt
+////////////////////////////////////////////////////////////////////////////////
+
+static string Prompt = "arangosh [%d]> ";
+
+////////////////////////////////////////////////////////////////////////////////
 /// @brief base class for clients
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -83,14 +97,6 @@ ArangoClient BaseClient;
 ////////////////////////////////////////////////////////////////////////////////
 
 V8ClientConnection* ClientConnection = 0;
-
-////////////////////////////////////////////////////////////////////////////////
-/// @brief Windows console codepage
-////////////////////////////////////////////////////////////////////////////////
-
-#ifdef _WIN32
-static int CodePage = 65001;
-#endif
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief object template for the initial connection
@@ -157,12 +163,6 @@ static vector<string> UnitTests;
 ////////////////////////////////////////////////////////////////////////////////
 
 static vector<string> JsLint;
-
-////////////////////////////////////////////////////////////////////////////////
-/// @brief command prompt
-////////////////////////////////////////////////////////////////////////////////
-
-static string Prompt = "arangosh [%d]> ";
 
 // -----------------------------------------------------------------------------
 // --SECTION--                                              JavaScript functions
@@ -358,7 +358,7 @@ static v8::Handle<v8::Value> JS_ImportJsonFile (v8::Arguments const& argv) {
 }
 
 ////////////////////////////////////////////////////////////////////////////////
-/// @brief normalize UTF 16 strings
+/// @brief normalizes UTF 16 strings
 ////////////////////////////////////////////////////////////////////////////////
 
 static v8::Handle<v8::Value> JS_normalize_string (v8::Arguments const& argv) {
@@ -391,24 +391,18 @@ static v8::Handle<v8::Value> JS_compare_string (v8::Arguments const& argv) {
 }
 
 // -----------------------------------------------------------------------------
-// --SECTION--                                                 private functions
+// --SECTION--                                                     private enums
 // -----------------------------------------------------------------------------
 
 ////////////////////////////////////////////////////////////////////////////////
-/// @brief return a new client connection instance
+/// @brief ClientConnection class
 ////////////////////////////////////////////////////////////////////////////////
 
-static V8ClientConnection* CreateConnection () {
-  return new V8ClientConnection(BaseClient.endpointServer(),
-                                BaseClient.databaseName(),
-                                BaseClient.username(),
-                                BaseClient.password(),
-                                BaseClient.requestTimeout(),
-                                BaseClient.connectTimeout(),
-                                ArangoClient::DEFAULT_RETRIES,
-                                BaseClient.sslProtocol(),
-                                false);
-}
+enum WRAP_CLASS_TYPES {WRAP_TYPE_CONNECTION = 1};
+
+// -----------------------------------------------------------------------------
+// --SECTION--                                                 private functions
+// -----------------------------------------------------------------------------
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief parses the program options
@@ -462,7 +456,13 @@ static vector<string> ParseProgramOptions (int argc, char* argv[]) {
 
   // and parse the command line and config file
   ProgramOptions options;
-  BaseClient.parse(options, description, argc, argv, "arangosh.conf");
+
+  char* p = TRI_BinaryName(argv[0]);
+  string conf = p;
+  TRI_FreeString(TRI_CORE_MEM_ZONE, p);
+  conf += ".conf";
+
+  BaseClient.parse(options, description, argc, argv, conf);
 
   // set V8 options
   v8::V8::SetFlagsFromCommandLine(&argc, argv, true);
@@ -487,13 +487,15 @@ static vector<string> ParseProgramOptions (int argc, char* argv[]) {
 }
 
 ////////////////////////////////////////////////////////////////////////////////
-/// @brief copy v8::Object to std::map<string, string>
+/// @brief copies v8::Object to std::map<string, string>
 ////////////////////////////////////////////////////////////////////////////////
 
 static void objectToMap (map<string, string>& myMap, v8::Handle<v8::Value> val) {
   v8::Handle<v8::Object> v8Headers = val.As<v8::Object> ();
+
   if (v8Headers->IsObject()) {
     v8::Handle<v8::Array> props = v8Headers->GetPropertyNames();
+
     for (uint32_t i = 0; i < props->Length(); i++) {
       v8::Handle<v8::Value> key = props->Get(v8::Integer::New(i));
       myMap[TRI_ObjectToString(key)] = TRI_ObjectToString(v8Headers->Get(key));
@@ -502,10 +504,20 @@ static void objectToMap (map<string, string>& myMap, v8::Handle<v8::Value> val) 
 }
 
 ////////////////////////////////////////////////////////////////////////////////
-/// @brief ClientConnection class
+/// @brief returns a new client connection instance
 ////////////////////////////////////////////////////////////////////////////////
 
-enum WRAP_CLASS_TYPES {WRAP_TYPE_CONNECTION = 1};
+static V8ClientConnection* CreateConnection () {
+  return new V8ClientConnection(BaseClient.endpointServer(),
+                                BaseClient.databaseName(),
+                                BaseClient.username(),
+                                BaseClient.password(),
+                                BaseClient.requestTimeout(),
+                                BaseClient.connectTimeout(),
+                                ArangoClient::DEFAULT_RETRIES,
+                                BaseClient.sslProtocol(),
+                                false);
+}
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief weak reference callback for queries (call the destructor here)
@@ -1569,6 +1581,8 @@ static void arangoshExitFunction (int, void*);
 
 // .............................................................................
 // Call this function to do various initialistions for windows only
+//
+// TODO can we move this to a general function for all binaries?
 // .............................................................................
 
 void arangoshEntryFunction() {
@@ -1798,6 +1812,8 @@ int main (int argc, char* argv[]) {
       if (CodePage > 0) {
         SetConsoleOutputCP((UINT) CodePage);
       }
+
+      // TODO we should have a special "printf" which can handle the color escape sequences!
       SetConsoleTextAttribute(GetStdHandle(STD_OUTPUT_HANDLE), greenColour);
       printf("                                  ");
       SetConsoleTextAttribute(GetStdHandle(STD_OUTPUT_HANDLE), redColour);
