@@ -1,0 +1,10 @@
+pretty-print = true
+
+[server]
+disable-authentication = true
+
+[javascript]
+startup-directory = ./js
+modules-path = ./js/client/modules;./js/common/modules;./js/node
+package-path = ./js/npm
+execute-string = require("org/arangodb/foxx/manager").run(ARGUMENTS);
