@@ -247,6 +247,12 @@ char* TRI_GetFilename (char const*);
 char* TRI_GetAbsolutePath (char const*, char const*);
 
 ////////////////////////////////////////////////////////////////////////////////
+/// @brief returns the binary name without any path or suffix
+////////////////////////////////////////////////////////////////////////////////
+
+char* TRI_BinaryName (const char* argv0);
+
+////////////////////////////////////////////////////////////////////////////////
 /// @brief locates the directory containing the program
 ////////////////////////////////////////////////////////////////////////////////
 
